content landing page

--- a/index.html
+++ b/index.html
@@ -1511,7 +1511,7 @@
                     <div class="swiper-slide">
                       <div class="dz-team style-4">
                         <div class="dz-media">
-                          <img src="./assets/images/team/pic1.webp" alt="/" />
+                          <img src="./assets/images/1000-700/1.jpg" alt="/" />
                         </div>
                         <ul class="dz-social">
                           <li>
@@ -1562,7 +1562,7 @@
                     <div class="swiper-slide">
                       <div class="dz-team style-4">
                         <div class="dz-media">
-                          <img src="images/team/large/pic2.webp" alt="/" />
+                          <img src="./assets/images/1000-700/2.jpg" alt="/" />
                         </div>
 
                           <li>
@@ -1594,10 +1594,10 @@
                           <div class="info-widget style-3">
                             <div class="widget-head">
                               <div class="widget-media">
-                                <img src="./assets/images/doctors/4-2.jpeg" alt="" />
+                                <img src="./assets/images/1000-700/8.jpg" alt="" />
                               </div>
                               <div class="widget-content">
-                                <h6 class="title">Dr. Natali jackson</h6>
+                                <h6 class="title">Dr. Menna  Assem and Dr Nada Taher</h6>
                                 <span class="sub-title text-primary"
                                   >Dental Experts</span
                                 >
@@ -1614,7 +1614,7 @@
                     <div class="swiper-slide">
                       <div class="dz-team style-4">
                         <div class="dz-media">
-                          <img src="images/team/large/pic3.webp" alt="/" />
+                          <img src="./assets/images/1000-700/3.jpg" alt="/" />
                         </div>
                         <ul class="dz-social">
                           <li>
@@ -1646,12 +1646,12 @@
                           <div class="info-widget style-3">
                             <div class="widget-head">
                               <div class="widget-media">
-                                <img src="./assets/images/doctors/4-12.jpeg" alt="" />
+                                <img src="./assets/images/1000-700/7.jpg" alt="" />
                               </div>
                               <div class="widget-content">
-                                <h6 class="title">Dr. Natali jackson</h6>
+                                <h6 class="title">Dr. Abdelhamid Refaat </h6>
                                 <span class="sub-title text-primary"
-                                  >Dental Experts</span
+                                  >Front Desk Representative</span
                                 >
                               </div>
                             </div>
@@ -1666,7 +1666,7 @@
                     <div class="swiper-slide">
                       <div class="dz-team style-4">
                         <div class="dz-media">
-                          <img src="images/team/large/pic4.webp" alt="/" />
+                          <img src="./assets/images/1000-700/4.jpg" alt="/" />
                         </div>
                         <ul class="dz-social">
                           <li>
@@ -1698,10 +1698,10 @@
                           <div class="info-widget style-3">
                             <div class="widget-head">
                               <div class="widget-media">
-                                <img src="./assets/images/doctors/4-10.jpeg" alt="" />
+                                <img src="./assets/images/1000-700/6.jpg" alt="" />
                               </div>
                               <div class="widget-content">
-                                <h6 class="title">Dr. Natali jackson</h6>
+                                <h6 class="title">Dr. Karim elffai and Dr. Karim Ahmed </h6>
                                 <span class="sub-title text-primary"
                                   >Dental Experts</span
                                 >
@@ -1718,7 +1718,7 @@
                     <div class="swiper-slide">
                       <div class="dz-team style-4">
                         <div class="dz-media">
-                          <img src="images/team/large/pic5.webp" alt="/" />
+                          <img src="./assets/images/1000-700/5.jpg" alt="/" />
                         </div>
                         <ul class="dz-social">
                           <li>
@@ -1750,18 +1750,17 @@
                           <div class="info-widget style-3">
                             <div class="widget-head">
                               <div class="widget-media">
-                                <img src="./assets/images/doctors/4-13.jpeg" alt="" />
+                                <img src="./assets/images/1000-700/5.jpg" alt="" />
                               </div>
                               <div class="widget-content">
-                                <h6 class="title">Dr. Natali jackson</h6>
+                                <h6 class="title">Dr. Omar El-Nashaar </h6>
                                 <span class="sub-title text-primary"
-                                  >Dental Experts</span
+                                  >Consultant in Dental Implants and Oral Diseases</span
                                 >
                               </div>
                             </div>
                             <p>
-                              “It is a long established fact that a reader will
-                              be distracted by the readable content”
+                                The expert in turning gaps into strong, natural-looking teeth
                             </p>
                           </div>
                         </div>
@@ -1770,7 +1769,7 @@
                     <div class="swiper-slide">
                       <div class="dz-team style-4">
                         <div class="dz-media">
-                          <img src="./assets/images/team/pic1.webp" alt="/" />
+                          <img src="./assets/images/1000-700/1.jpg" alt="/" />
                         </div>
                         <ul class="dz-social">
                           <li>
@@ -1802,18 +1801,17 @@
                           <div class="info-widget style-3">
                             <div class="widget-head">
                               <div class="widget-media">
-                                <img src="./assets/images/doctors/4-7.jpeg" alt="" />
+                                <img src="./assets/images/1000-700/2.jpg" alt="" />
                               </div>
                               <div class="widget-content">
-                                <h6 class="title">Dr. Natali jackson</h6>
+                                <h6 class="title">Dr. Mohamed Diaa</h6>
                                 <span class="sub-title text-primary"
-                                  >Dental Experts</span
+                                  >  Specialist in Dental Prosthetics</span
                                 >
                               </div>
                             </div>
                             <p>
-                              “It is a long established fact that a reader will
-                              be distracted by the readable content”
+                              He's bringing smiles back Dr. Mohamed's prosthetics look and feel just right
                             </p>
                           </div>
                         </div>
@@ -1822,7 +1820,7 @@
                     <div class="swiper-slide">
                       <div class="dz-team style-4">
                         <div class="dz-media">
-                          <img src="images/team/large/pic2.webp" alt="/" />
+                          <img src="./assets/images/1000-700/2.jpg" alt="/" />
                         </div>
                         <ul class="dz-social">
                           <li>
@@ -1854,18 +1852,17 @@
                           <div class="info-widget style-3">
                             <div class="widget-head">
                               <div class="widget-media">
-                                <img src="./assets/images/doctors/4-3.jpeg" alt="" />
+                                <img src="./assets/images/1000-700/4.jpg" alt="" />
                               </div>
                               <div class="widget-content">
-                                <h6 class="title">Dr. Natali jackson</h6>
+                                <h6 class="title">Dr. Ahmed Ammar </h6>
                                 <span class="sub-title text-primary"
-                                  >Dental Experts</span
+                                  >Specialist in Cosmetic Dentistry and Fillings</span
                                 >
                               </div>
                             </div>
                             <p>
-                              “It is a long established fact that a reader will
-                              be distracted by the readable content”
+                              From simple fillings to full makeovers he's got your smile covered
                             </p>
                           </div>
                         </div>
@@ -1874,7 +1871,7 @@
                     <div class="swiper-slide">
                       <div class="dz-team style-4">
                         <div class="dz-media">
-                          <img src="images/team/large/pic3.webp" alt="/" />
+                          <img src="./assets/images/1000-700/3.jpg" alt="/" />
                         </div>
                         <ul class="dz-social">
                           <li>
@@ -1906,18 +1903,17 @@
                           <div class="info-widget style-3">
                             <div class="widget-head">
                               <div class="widget-media">
-                                <img src="./assets/images/doctors/4-4.jpeg" alt="" />
+                                <img src="./assets/images/1000-700/3.jpg" alt="" />
                               </div>
                               <div class="widget-content">
-                                <h6 class="title">Dr. Natali jackson</h6>
+                                <h6 class="title">Dr. Dalia Sameh</h6>
                                 <span class="sub-title text-primary"
-                                  >Dental Experts</span
+                                  > Specialist in Esthetic and Restorative Dentistry</span
                                 >
                               </div>
                             </div>
                             <p>
-                              “It is a long established fact that a reader will
-                              be distracted by the readable content”
+                              Known for her artistic approach, Dr. Dalia Sameh brings out the best in every smile through expert esthetic and restorative techniques
                             </p>
                           </div>
                         </div>
