--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
       /* WhatsApp Fixed Button Styles */
       .whatsapp-fixed {
         position: fixed;
-        bottom: 30px;
-        left: 30px;
-        width: 60px;
-        height: 60px;
+        bottom: 90px !important;
+        left: 30px !important;
+        width: 60px !important;
+        height: 60px !important;
         background-color: #25d366;
         border-radius: 50%;
         display: flex;
@@ -155,17 +155,6 @@
         }
         100% {
           box-shadow: 0 4px 12px rgba(37, 211, 102, 0.4);
-        }
-      }
-      
-      /* Responsive adjustments */
-      @media (max-width: 768px) {
-        .whatsapp-fixed {
-          bottom: 20px;
-          left: 20px;
-          width: 55px;
-          height: 55px;
-          font-size: 24px;
         }
       }
       
@@ -739,7 +728,7 @@
                       data-wow-delay="0.2s"
                       data-wow-duration="0.8s"
                     >
-                      Get Beautiful Straight
+                      We give a vibe to every 
                       <span class="smile"
                         >Smile
                         <svg
@@ -773,7 +762,7 @@
                       data-wow-delay="0.4s"
                       data-wow-duration="0.8s"
                     >
-                    Achieve the smile you've always dreamed of, with comfort and efficiency.
+                    Your Dental health is our main concern 
                     </div>
                     <div
                       class="d-flex align-items-center m-b15 wow fadeInUp"
@@ -2584,12 +2573,12 @@
           <div class="container">
             <div class="row">
               <div
-                class="col-xl-7 col-lg-6 m-b30 wow fadeInUp"
+                class="col-lg-6 m-b30 wow fadeInUp"
                 data-wow-delay="0.2s"
                 data-wow-duration="0.8s"
               >
                 <div class="map-wrapper style-1">
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13812.842295149014!2d31.3685173!3d30.059498!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14583ddb349a7dab%3A0xbc68f6c7b7cf7899!2sV%20Dental%20Clinics%20Nasr%20City!5e0!3m2!1sen!2seg!4v1752615172149!5m2!1sen!2seg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13816.307432317535!2d31.4851926!3d30.0346528!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14582310a8ffcf49%3A0x6a808543544b2525!2sV%20Dental%20Clinics!5e0!3m2!1sar!2seg!4v1754518284670!5m2!1sar!2seg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
                   <div class="item1">
                     <div class="info-widget style-16">
@@ -2607,9 +2596,10 @@
                               <h5 class="dz-title fw-semibold">
                                 Working Hours:
                               </h5>
-                              <p>
-                                Mon-Thu: 8:00am-5:00pm<br />
-                                Fri: 8:00am-1:00pm
+                              <p></p>
+                                sat-thu: 3:00pm-10:00pm
+                                <br />
+                                fri: no working
                               </p>
                             </div>
                           </div>
@@ -2620,7 +2610,63 @@
                           >
                             <div class="icon-bx bg-secondary">
                               <span class="icon-cell">
-                                <i class="feather icon-mail"></i>
+                                <i class="feather icon-map-pin"></i>
+                              </span>
+                            </div>
+                            <div class="icon-content">
+                              <h5 class="dz-title fw-semibold">
+                                Office Address:
+                              </h5>
+                              <p>
+clinic 121, Abdullah ibn salamah, the fount mall, قسم أول القاهرة الجديدة، محافظة القاهرة‬ 11865
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+                            <div
+                class="col-lg-6 m-b30 wow fadeInUp"
+                data-wow-delay="0.2s"
+                data-wow-duration="0.8s"
+              >
+                <div class="map-wrapper style-1">
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13812.842295149014!2d31.3685173!3d30.059498!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14583ddb349a7dab%3A0xbc68f6c7b7cf7899!2sV%20Dental%20Clinics%20Nasr%20City!5e0!3m2!1sar!2seg!4v1754518156521!5m2!1sar!2seg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                  <div class="item1">
+                    <div class="info-widget style-16">
+                      <div class="row g-xl-5 g-4">
+                        <div class="col-xl-6 col-lg-12 col-md-6">
+                          <div
+                            class="icon-bx-wraper style-1 align-items-center"
+                          >
+                            <div class="icon-bx bg-primary">
+                              <span class="icon-cell">
+                                <i class="feather icon-clock"></i>
+                              </span>
+                            </div>
+                            <div class="icon-content">
+                              <h5 class="dz-title fw-semibold">
+                                Working Hours:
+                              </h5>
+                              <p></p>
+                                sat-thu: 3:00pm-10:00pm
+                                <br />
+                                fri: no working
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-xl-6 col-lg-12 col-md-6">
+                          <div
+                            class="icon-bx-wraper style-1 align-items-center"
+                          >
+                            <div class="icon-bx bg-secondary">
+                              <span class="icon-cell">
+                                <i class="feather icon-map-pin"></i>
                               </span>
                             </div>
                             <div class="icon-content">
@@ -2639,7 +2685,7 @@
                   </div>
                 </div>
               </div>
-              <div
+              <!-- <div
                 class="col-xl-5 col-lg-6 m-b30 wow fadeInUp"
                 data-wow-delay="0.4s"
                 data-wow-duration="0.8s"
@@ -2763,7 +2809,7 @@
                     </form>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </section>
