--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="author" content="V Dental Clinics" />
-    <meta name="robots" content="index, follow" />
+    <meta name="robots" content="index" />
     <meta name="format-detection" content="telephone=no" />
 
     <meta
@@ -32,21 +32,6 @@
       property="og:image"
       content="https://vdentalclinic.com/images/v-dental-clinic-social.jpg"
     />
-
-    <!-- TWITTER META -->
-    <meta
-      name="twitter:title"
-      content="V Dental Clinics"
-    />
-    <meta
-      name="twitter:description"
-      content="V Dental Clinics is a dental clinic that provides comprehensive dental services including cleanings, cosmetic dentistry, implants, and emergency care. Schedule your appointment today for quality dental treatment."
-    />
-    <meta
-      name="twitter:image"
-      content="https://vdentalclinic.com/images/v-dental-clinic-social.jpg"
-    />
-    <meta name="twitter:card" content="summary_large_image" />
 
     <!-- CANONICAL URL -->
     <link
