--- a/blog-details.html
+++ b/blog-details.html
@@ -1188,7 +1188,7 @@
     container.innerHTML = '<div class="col-12 text-center py-5"><div class="spinner-border text-primary" role="status"><span class="visually-hidden">Loading...</span></div></div>';
 
     try {
-      const response = await fetch(`http://localhost:3001/api/v1/blog/by-slug/${slug}`);
+      const response = await fetch(`https://api.vdentaleg.com/api/v1/blog/by-slug/${slug}`);
 
       if (!response.ok) {
         throw new Error(`HTTP error! status: ${response.status}`);
@@ -1662,7 +1662,7 @@
   document.addEventListener('DOMContentLoaded', async function () {
     try {
       // Fetch general settings from the new endpoint
-      const response = await fetch('http://localhost:3001/api/v1/general-settings/front');
+      const response = await fetch('https://api.vdentaleg.com/api/v1/general-settings/front');
       
       if (!response.ok) {
         throw new Error(`HTTP error! status: ${response.status}`);
